force-app/main/default/objects/FEC_Termination__c/FEC_Termination__c.object-meta.xml
<CustomObject>
    <label>Termination</label>
    <nameField>
        <displayFormat>TN - {0}</displayFormat>
        <label>Termination Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Termination</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>