force-app/main/default/objects/FEC_Termination__c/fields/FEC_Interest_on_Overdue_Interest__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interest_on_Overdue_Interest__c</fullName>
    <label>Interest on Overdue Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>