force-app/main/default/objects/FEC_Termination__c/fields/FEC_Interest_On_Termination__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interest_On_Termination__c</fullName>
    <label>Interest On Termination</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>