force-app/main/default/objects/FEC_Termination__c/fields/FEC_Overdue_Penalty__c.field-meta.xml
<CustomField>
    <fullName>FEC_Overdue_Penalty__c</fullName>
    <label>Overdue Penalty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>