force-app/main/default/objects/FEC_Termination__c/fields/FEC_Pre_Payment_Penalty__c.field-meta.xml
<CustomField>
    <fullName>FEC_Pre_Payment_Penalty__c</fullName>
    <label>Pre Payment Penalty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>