force-app/main/default/objects/FEC_Termination__c/fields/FEC_Repayment_Fee_Overdue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Repayment_Fee_Overdue__c</fullName>
    <label>Repayment Fee Overdue</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>