force-app/main/default/objects/FEC_Termination__c/fields/FEC_Total_Principal_Paid__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Principal_Paid__c</fullName>
    <label>Total Principal Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>