force-app/main/default/objects/FEC_Termination__c/fields/FEC_Waived_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Waived_Amount__c</fullName>
    <label>Waived Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>